--- a/package.json
+++ b/package.json
@@ -5,29 +5,33 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint",
-    "assets:prepare": "powershell -ExecutionPolicy Bypass -File scripts/prepare_assets.ps1"
+    "assets:prepare": "powershell -ExecutionPolicy Bypass -File scripts/prepare_assets.ps1",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@expo-google-fonts/noto-sans-jp": "^0.4.1",
     "@expo-google-fonts/noto-serif-jp": "^0.4.1",
+    "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "5.0.1",
+    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.4.5",
     "expo": "54.0.6",
-    "expo-asset": "~12.0.8",
+    "expo-asset": "~12.0.9",
     "expo-av": "~16.0.7",
     "expo-blur": "~15.0.7",
-    "expo-constants": "~18.0.8",
+    "expo-constants": "~18.0.9",
+    "expo-dev-client": "~6.0.12",
     "expo-file-system": "~19.0.14",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
@@ -37,7 +41,7 @@
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-navigation-bar": "~5.0.8",
-    "expo-router": "~6.0.3",
+    "expo-router": "~6.0.7",
     "expo-sharing": "~14.0.7",
     "expo-speech": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
@@ -58,18 +62,23 @@
     "react-native-view-shot": "4.0.3",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "react-native-youtube-iframe": "^2.4.1",
-    "@expo/metro-runtime": "~6.1.2",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "react-native-youtube-iframe": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "^20.0.2",
+    "@react-native-community/cli-platform-android": "^20.0.2",
+    "@react-native/gradle-plugin": "^0.76.9",
+    "@react-native/metro-config": "^0.81.0",
     "@types/react": "19.1.13",
     "dotenv": "^17.2.1",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "gtts": "^0.2.1",
+    "metro": "^0.80.0",
     "p-limit": "^7.1.1",
+    "patch-package": "^8.0.0",
     "react-native-svg-transformer": "^1.5.1",
     "typescript": "~5.9.2"
   },
