--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "@expo-google-fonts/noto-serif-jp": "^0.4.1",
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-aria/button": "^0.2.10",
+    "@react-native-aria/checkbox": "^0.2.10",
+    "@react-native-aria/focus": "^0.2.9",
+    "@react-native-aria/interactions": "^0.2.16",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "5.0.1",
