--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "expo-web-browser": "~15.0.7",
     "firebase": "^12.3.0",
     "lottie-react-native": "~7.3.1",
+    "lucide-react-native": "^0.544.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
