--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "expo lint",
-    "assets:prepare": "powershell -ExecutionPolicy Bypass -File scripts/prepare_assets.ps1"
+    "assets:prepare": "powershell -ExecutionPolicy Bypass -File scripts/prepare_assets.ps1",
+     "kanji:webp": "node ./scripts/fetch_kanjivg_webp.mjs"
   },
   "dependencies": {
     "@expo-google-fonts/noto-sans-jp": "^0.4.1",
@@ -61,7 +62,7 @@
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1",
+    "react-native-svg": "^15.12.1",
     "react-native-view-shot": "4.0.3",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
@@ -77,6 +78,7 @@
     "gtts": "^0.2.1",
     "p-limit": "^7.1.1",
     "react-native-svg-transformer": "^1.5.1",
+    "sharp": "^0.34.4",
     "typescript": "~5.9.2"
   },
   "private": true
