--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-asset": "~12.0.9",
     "expo-av": "~16.0.7",
     "expo-blur": "~15.0.7",
+    "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.8",
     "expo-file-system": "~19.0.14",
     "expo-font": "~14.0.8",
@@ -59,6 +60,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
@@ -72,6 +74,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@resvg/resvg-js": "^2.6.2",
     "@types/react": "^19.1.13",
     "dotenv": "^17.2.1",
     "eslint": "^9.25.0",
@@ -80,6 +83,7 @@
     "p-limit": "^7.1.1",
     "react-native-svg-transformer": "^1.5.1",
     "sharp": "^0.34.4",
+    "sharp-cli": "^5.2.0",
     "typescript": "~5.9.2"
   },
   "private": true
