--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@react-navigation/stack": "^7.4.5",
     "expo": "54.0.6",
     "expo-asset": "~12.0.9",
-    "expo-av": "~16.0.7",
+    "expo-audio": "~1.0.13",
     "expo-blur": "~15.0.7",
     "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.8",
@@ -56,6 +56,7 @@
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
+    "expo-video": "~3.0.11",
     "expo-web-browser": "~15.0.7",
     "firebase": "^12.3.0",
     "lottie-react-native": "~7.3.1",
@@ -75,7 +76,7 @@
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
     "react-native-youtube-iframe": "^2.4.1",
-    "expo-video": "~3.0.11"
+    "expo-av": "~16.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
