--- a/package.json
+++ b/package.json
@@ -37,13 +37,14 @@
     "expo": "54.0.6",
     "expo-asset": "~12.0.9",
     "expo-audio": "~1.0.13",
+    "expo-av": "~16.0.7",
     "expo-blur": "~15.0.7",
     "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.8",
     "expo-file-system": "~19.0.14",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.8",
+    "expo-image": "~3.0.9",
     "expo-image-manipulator": "~14.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
@@ -75,8 +76,7 @@
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
-    "react-native-youtube-iframe": "^2.4.1",
-    "expo-av": "~16.0.7"
+    "react-native-youtube-iframe": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
