--- a/.gitattributes
+++ b/.gitattributes
@@ -10,3 +10,8 @@
 *.bat  text eol=crlf
 *.ps1  text eol=crlf
 *.mp3 filter=lfs diff=lfs merge=lfs -text
+*.webp filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.wav filter=lfs diff=lfs merge=lfs -text
+*.mp4 filter=lfs diff=lfs merge=lfs -text
