--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "expo-blur": "~15.0.7",
     "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.8",
+    "expo-document-picker": "~14.0.7",
     "expo-file-system": "~19.0.17",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
