--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "expo-linking": "~8.0.8",
     "expo-localization": "~17.0.7",
     "expo-navigation-bar": "~5.0.8",
+    "expo-notifications": "~0.32.13",
     "expo-router": "~6.0.12",
     "expo-sharing": "~14.0.7",
     "expo-speech": "~14.0.7",
@@ -77,6 +78,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-calendars": "^1.1313.0",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "~2.28.0",
@@ -89,7 +91,8 @@
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
-    "react-native-youtube-iframe": "^2.4.1"
+    "react-native-youtube-iframe": "^2.4.1",
+    "@react-native-community/datetimepicker": "8.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
