--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@react-native-aria/focus": "^0.2.9",
     "@react-native-aria/interactions": "^0.2.16",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "5.0.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
@@ -91,8 +92,7 @@
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
-    "react-native-youtube-iframe": "^2.4.1",
-    "@react-native-community/datetimepicker": "8.4.4"
+    "react-native-youtube-iframe": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
