Actualización: Validación de credenciales, reglas Firestore, Pantalla Pagos

--- a/functions/package.json
+++ b/functions/package.json
@@ -14,8 +14,10 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "escuelanichiboku": "file:..",
     "firebase-admin": "^12.7.0",
-    "firebase-functions": "^6.6.0"
+    "firebase-functions": "^6.6.0",
+    "stripe": "14.23.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0",
