--- a/firebase.json
+++ b/firebase.json
@@ -9,7 +9,7 @@
     {
       "source": "functions",
       "codebase": "default",
-      "disallowLegacyRuntimeConfig": true,
+      "runtime": "nodejs20",
       "ignore": [
         "node_modules",
         ".git",
@@ -18,6 +18,7 @@
         "*.local"
       ],
       "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" install",
         "npm --prefix \"$RESOURCE_DIR\" run build"
       ]
     }
