--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "@react-navigation/stack": "^7.4.5",
+    "@stripe/stripe-react-native": "^0.57.0",
     "axios": "^1.12.2",
     "expo": "54.0.13",
     "expo-asset": "~12.0.9",
